# rustc-bugs

interner-perf-slowdown/: .gitignore  Cargo.toml  Readme.md
interner-perf-slowdown/benchmarks/: run.rs
