[package]
name = "rustc-hashtable-regression"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
dashmap = "4.0"

[dev-dependencies]
rustc-hash = "1.1.0"
ahash = "0.7.4"
criterion = "0.3"
walkdir = "2.3.2"
typed-arena = "2"
crossbeam = "0.8"

[[bench]]
name = "interner"
harness = false
path = "benchmarks/run.rs"
